using System.Collections;

public interface IGenerator
{
    public IEnumerator Generate();
}